<resources>
    <string name="app_name">FitIn_v2</string>
    <string name="find_id">계정을 잊으셨나요? 아이디 또는 비밀번호 찾기</string>
    <string name="see_terms">보기</string>

    <string name="main_login">이미 가입하셨나요? 로그인하기</string>
    <string name="main_title_text">마음 맞는 사람들과\n특별한 스터디를 시작해보세요</string>

    <string name="register_name_hint">이름</string>
    <string name="register_emailId_hint">아이디(이메일)</string>
    <string name="register_symbol">\@</string>
    <string name="register_email_hint">naver.com</string>
    <string name="register_password_hint">비밀번호를 입력해주세요</string>
    <string name="register_password_check_hint">비밀번호를 한번 더 입력해주세요</string>
    <string name="register_button_text">회원가입</string>

    <string name="register_phone_hint">휴대전화번호 입력</string>
    <string name="register_phone_verficaton">인증번호 입력</string>


    <string name="clause_1">서비스 이용약관(필수)</string>
    <string name="clause_2">개인정보 처리방침(필수)</string>
    <string name="clause_3">위치기반 서비스 이용약관(선택)</string>
    <string name="clause_4">마케팅 정보 수신 동의(선택)</string>


    <string name="login_email_hint">이메일을 입력해주세요.</string>
    <string name="login_password_hint">비밀번호를 입력해주세요.</string>
    <string name="login_autologin_text">자동 로그인</string>
    <string name="login_savelogin_text">아이디 저장</string>
    <string name="login_naverRegister_text">네이버</string>
    <string name="login_register_title_text">핏인이 처음이신가요? 회원가입</string>

    <string name="complete_title_text">FITIN이 당신을\n진심으로 환영합니다</string>
    <string name="register_second_all_check_cb_text">전체 동의</string>
    <string name="register_second_service_term_cb_text">[필수] 서비스 이용 약관</string>
    <string name="register_second_personal_information_cb_text">[필수] 개인정보 취급방침</string>
    <string name="register_second_location_service_cb_text">[선택] 위치 정보 이용 약관</string>


    <string name="find_pw_second_password_new_hint">새로운 비밀번호를 입력해 주세요</string>
    <string name="find_pw_second_password_re_hint">비밀번호를 다시 한번 입력해 주세요</string>

    <string name="find_id_complete_text">당신의 FITIN 아이디는\nXXXXXX입니다</string>

    <string name="find_pw_complete_text">비밀번호가 변경되었습니다\n다시 로그인 해주세요</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>