<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="signinViewModel"
            type="com.example.fitin_v2.ui.onboard.signin.SignInViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_end="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/iv_back"
            android:onClick="@{() -> signinViewModel.onBack()}"
            app:layout_constraintEnd_toStartOf="@id/tv_login_title"
            app:layout_constraintStart_toStartOf="@id/et_email"
            app:layout_constraintTop_toTopOf="@id/tv_login_title" />

        <ImageView
            android:id="@+id/tv_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="40dp"
            android:gravity="center_horizontal"
            android:src="@drawable/iv_login"
            app:layout_constraintEnd_toEndOf="@+id/et_email"
            app:layout_constraintStart_toEndOf="@+id/btn_back"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:background="@drawable/et_input"
            android:hint="@string/login_email_hint"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="@={signinViewModel.email}"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/tv_login_title" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/et_input"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="@={signinViewModel.password}"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/et_email" />


        <LinearLayout
            android:id="@+id/ll_checkbox_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="end"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/btn_login"
            app:layout_constraintStart_toStartOf="@id/btn_login"
            app:layout_constraintTop_toBottomOf="@+id/et_password">

            <CheckBox
                android:id="@+id/cb_auto_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_autologin_text"
                android:textColor="@color/main_black" />

            <CheckBox
                android:id="@+id/cb_save_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_savelogin_text"
                android:textColor="@color/main_black" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@android:color/transparent"
            android:src="@drawable/btn_login"
            android:onClick="@{(v) -> signinViewModel.onLogin(v)}"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintStart_toStartOf="@+id/gl_start"
            app:layout_constraintTop_toBottomOf="@+id/ll_checkbox_group" />

        <ImageButton
            android:id="@+id/btn_naver_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:background="@android:color/transparent"
            android:src="@drawable/btn_naver_login"
            app:layout_constraintEnd_toStartOf="@id/btn_google_register"
            app:layout_constraintStart_toStartOf="@id/btn_login"
            app:layout_constraintTop_toTopOf="@id/btn_google_register" />

        <ImageButton
            android:id="@+id/btn_google_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:src="@drawable/btn_google_login"
            app:layout_constraintEnd_toEndOf="@id/btn_login"
            app:layout_constraintStart_toEndOf="@+id/btn_naver_register"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />


        <TextView
            android:id="@+id/tv_find_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:text="@string/find_id"
            android:textColor="@color/main_black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/gl_end"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@+id/btn_google_register" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>